fixing Headings are not structured issue

--- a/sample/colorscheme-eureka.html
+++ b/sample/colorscheme-eureka.html
@@ -170,7 +170,7 @@
                                     <div class="color" style="background-color:#D9B295;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #D9B295<br>RGB: 217,178,149</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #D9B295<br>RGB: 217,178,149</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -178,7 +178,7 @@
                                     <div class="color" style="background-color:#3E4B4D;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #3E4B4D<br />RGB: 62,75,77</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #3E4B4D<br />RGB: 62,75,77</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -186,7 +186,7 @@
                                     <div class="color" style="background-color:#21272A;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #21272A<br />RGB: 33,39,42</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #21272A<br />RGB: 33,39,42</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -194,14 +194,14 @@
                                     <div class="color" style="background-color:#f9f8f8;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #f9f8f8<br />RGB: 249,248,248</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f9f8f8<br />RGB: 249,248,248</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
                             <p>
