--- a/sample/colorscheme-mono.html
+++ b/sample/colorscheme-mono.html
@@ -170,7 +170,7 @@
                                     <div class="color" style="background-color:#ffce2b;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #ffce2b<br>RGB: 255,206,43</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #ffce2b<br>RGB: 255,206,43</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -178,7 +178,7 @@
                                     <div class="color" style="background-color:#545351;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #545351<br />RGB: 84,84,84</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #545351<br />RGB: 84,84,84</div>
                         </div>
 
                         <div class="quarter">
@@ -187,7 +187,7 @@
                                     <div class="color" style="background-color:#191919;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #191919<br />RGB: 25,25,25</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #191919<br />RGB: 25,25,25</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -195,14 +195,14 @@
                                     <div class="color" style="background-color:#f4f3ef;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #f4f3ef<br />RGB: 244,243,239</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f4f3ef<br />RGB: 244,243,239</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
 
