--- a/sample/colorscheme-oceanside.html
+++ b/sample/colorscheme-oceanside.html
@@ -174,7 +174,7 @@
                                     <div class="color" style="background-color:#FDB81E;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #FDB81E<br>RGB: 253,184,30</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #FDB81E<br>RGB: 253,184,30</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -182,7 +182,7 @@
                                     <div class="color" style="background-color:#046B99;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #046B99<br />RGB: 4,107,153</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #046B99<br />RGB: 4,107,153</div>
                         </div>
 
                         <div class="quarter">
@@ -191,7 +191,7 @@
                                     <div class="color" style="background-color:#323A45;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #323A45<br />RGB: 50,58,69</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #323A45<br />RGB: 50,58,69</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -199,13 +199,13 @@
                                     <div class="color" style="background-color:#E1F2F7;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #E1F2F7<br />RGB: 225,242,247</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #E1F2F7<br />RGB: 225,242,247</div>
                         </div>
                     </div>
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
                             <p>
