--- a/sample/colorscheme-pasorobles.html
+++ b/sample/colorscheme-pasorobles.html
@@ -171,7 +171,7 @@
                                     <div class="color" style="background-color:#fbad23;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #fbad23<br>RGB: 251,173,35</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #fbad23<br>RGB: 251,173,35</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -179,7 +179,7 @@
                                     <div class="color" style="background-color:#691808;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #691808<br />RGB: 105,24,8</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #691808<br />RGB: 105,24,8</div>
                         </div>
 
                         <div class="quarter">
@@ -188,7 +188,7 @@
                                     <div class="color" style="background-color:#313131;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #313131<br />RGB: 49,49,49</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #313131<br />RGB: 49,49,49</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -196,14 +196,14 @@
                                     <div class="color" style="background-color:#f5f5f5;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #f5f5f5<br />RGB: 245,245,245</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #f5f5f5<br />RGB: 245,245,245</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
                             <p>
