--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -86,7 +86,7 @@ Based on Twitter Bootstrap
 
                     <hr>
 
-            <h3>Countdown primary</h3>
+            <h2>Countdown primary</h2>
                     
 
                     <div class="row section-primary countdown">
@@ -116,11 +116,11 @@ Based on Twitter Bootstrap
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">HTML Markup</h4>
+                            <h3 class=" h4modal-title">HTML Markup</h3>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <h4>Source Code:</h4>
+                            <h3 class="h4">Source Code:</h3>
 
                             <div class="tab-group">
                                 <span class="ca-gov-icon-favorite"></span>
