--- a/sample/modules/card-deck.html
+++ b/sample/modules/card-deck.html
@@ -2,7 +2,7 @@
     <div class="card card-primary">
         <img class="card-img-top" src="/sample/images/service-tiles/service-find-job.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h3 class="card-title h5">Card title</h3>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small>Last updated 3 mins ago</small></p>
         </div>
@@ -10,7 +10,7 @@
     <div class="card card-primary">
         <img class="card-img-top" src="/sample/images/service-tiles/redwoods.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h3 class="card-title h5">Card title</h3>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small>Last updated 3 mins ago</small></p>
         </div>
@@ -18,7 +18,7 @@
     <div class="card card-primary">
         <img class="card-img-top" src="/sample/images/service-tiles/driving-test.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h3 class="card-title h5">Card title</h3>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             <p class="card-text"><small>Last updated 3 mins ago</small></p>
         </div>
