--- a/sample/modules/card.html
+++ b/sample/modules/card.html
@@ -1,7 +1,7 @@
 <div class="card card-default">
     <img class="card-img-top img-responsive" src="/sample/images/background_2.jpg" alt="Card image cap">
     <div class="card-block">
-        <h4 class="card-title">Card title</h4>
+        <h3 class="card-title h4">Card title</h3>
         <p>Some example text to build on the card title and make up the bulk of the card's content. <a href="">This is a sample link</a></p>
         <a href="#" class="btn btn-default">Button</a>
     </div>
