--- a/sample/modules/cards.html
+++ b/sample/modules/cards.html
@@ -1,6 +1,6 @@
 <div class="card card-default">
     <div class="card-heading">
-        <h4><span class="ca-gov-icon-info"></span> Card (Default)</h4>
+        <h3><span class="ca-gov-icon-info"></span> Card (Default)</h3>
         <div class="options">
             <a href="" class="btn btn-default">button</a>
         </div>
@@ -12,7 +12,7 @@
 
 <div class="card card-understated">
     <div class="card-heading">
-        <h4><span class="ca-gov-icon-info"></span> Card (Understated)</h4>
+        <h3><span class="ca-gov-icon-info" aria-hidden="true"></span> Card (Understated)</h3>
         <div class="options">
             <a href="" class="btn btn-default">button</a>
         </div>
@@ -24,7 +24,7 @@
 
 <div class="card card-standout highlight">
     <div class="card-heading">
-        <h2><span class="ca-gov-icon-info"></span> Card (Standout Highlight)</h2>
+        <h3><span class="ca-gov-icon-info" aria-hidden="true"></span> Card (Standout Highlight)</h3>
         <div class="options">
             <a href="" class="btn btn-default">button</a>
         </div>
@@ -36,7 +36,7 @@
 
 <div class="card card-overstated">
     <div class="card-heading">
-        <h3><span class="ca-gov-icon-info"></span> Card (Overstated)</h3>
+        <h3><span class="ca-gov-icon-info" aria-hidden="true">]</span> Card (Overstated)</h3>
         <div class="options">
             <a href="" class="btn btn-default">button</a>
         </div>
