--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -22,9 +22,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Incredible standard post</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -70,9 +70,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Demperdiet molesti volutpa</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
@@ -118,9 +118,9 @@
                     </li>
                 </ul>
 
-                <h4 class="m-t-0 m-b-sm">
+                <h3 class="h4 m-t-0 m-b-sm">
                     <a class="u-link-v5 color-gray-dark color-primary-hover" href="#">Nullam non metus inmi</a>
-                </h4>
+                </h3>
 
                 <p>Nullam elementum tincidunt massa, a pulvinar leo ultricies ut. Ut fringilla lectus tellusimp imperdiet molestie est volutpat at. Sed viverra cursus nibh.</p>
 
