--- a/sample/modules/profile-banners-schema.html
+++ b/sample/modules/profile-banners-schema.html
@@ -8,7 +8,7 @@
         </div>
         <div class="media-body">
             <!-- Figure Info -->
-            <h4 class="m-0" itemprop="name">Official Name</h4>
+            <h3 class="m-0 h4" itemprop="name">Official Name</h3>
             <div class="d-block">
                 <span class="font-size-13" itemprop="jobTitle">Government Entity Title</span>
 
@@ -29,7 +29,7 @@
         <!-- Figure Info -->
         <div class="d-block">
             <div class="m-b-sm">
-                <h4 class="m-0" itemprop="name">Official Name</h4>
+                <h3 class="m-0 h4" itemprop="name">Official Name</h3>
                 <em class="d-block" itemprop="jobTitle">Government Entity Title</em>
             </div>
             <em class="d-block font-size-13" itemprop="url"><a href="#">Website</a></em>
