--- a/sample/modules/profile-banners.html
+++ b/sample/modules/profile-banners.html
@@ -8,7 +8,7 @@
         </div>
         <div class="media-body">
             <!-- Figure Info -->
-            <h4 class="m-0">Official Name</h4>
+            <h3 class="h4 m-0">Official Name</h3>
             <div class="d-block">
                 <span class="font-size-13">Government Entity Title</span>
 
@@ -30,7 +30,7 @@
         <!-- Figure Info -->
         <div class="d-block">
             <div class="m-b-sm">
-                <h4 class="m-0">Official Name</h4>
+                <h3 class="h4 m-0">Official Name</h3>
                 <em class="d-block">Government Entity Title</em>
             </div>
             <em class="d-block font-size-13">Website</em>
