--- a/sample/modules/service-tile.html
+++ b/sample/modules/service-tile.html
@@ -1,7 +1,7 @@
 <div class="service-group clearfix">
   <div tabindex="0" class="service-tile" data-tile-id="fakeid" style="background-image:url(/sample/images/service-tiles/driving-test.jpg); background-size: cover;">
       <div class="teaser">
-          <h4 class="title">Find a Traffic School</h4>
+          <h3 class="title h4">Find a Traffic School</h3>
       </div>
   </div>
 </div>
