--- a/sample/navigation-active.html
+++ b/sample/navigation-active.html
@@ -68,7 +68,7 @@ Based on Twitter Bootstrap
 
      
 
-            <h5><strong>Example:</strong></h5>
+            <h3 class="h5"><strong>Example:</strong></h3>
 
 <pre>
 &lt;script type="text/javascript"&gt;
