--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row group">
             <div class="quarter">
-                <h4>State Wide Campaigns</h4>
+                <h3 class="h4">State Wide Campaigns</h3>
                 <ul class="list-standout">
                     <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
                     <li><a href="http://saveourwater.com/" class="text-white">Save Our Water</a></li>
@@ -13,7 +13,7 @@
             </div>
 
             <div class="quarter">
-                <h4>Alerts</h4>
+                <h3 class="h4">Alerts</h3>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Amber Alert</a></li>
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Weather</a></li>
@@ -24,7 +24,7 @@
             </div>
 
             <div class="quarter">
-                <h4>Support</h4>
+                <h3 class="h4">Support</h3>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="quarter">
-                <h4>Awards</h4>
+                <h3 class="h4">Awards</h3>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Center for Digital Governement</a></li>
