--- a/sample/colorscheme-santabarbara.html
+++ b/sample/colorscheme-santabarbara.html
@@ -171,7 +171,7 @@
                                     <div class="color" style="background-color:#FF9B53;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #FF9B53<br>RGB: 255,155,83</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #FF9B53<br>RGB: 255,155,83</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -179,7 +179,7 @@
                                     <div class="color" style="background-color:#834B1E;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #834B1E<br />RGB: 131,75,30</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #834B1E<br />RGB: 131,75,30</div>
                         </div>
 
                         <div class="quarter">
@@ -188,7 +188,7 @@
                                     <div class="color" style="background-color:#3c2c29;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #3c2c29<br />RGB: 60,44,41</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #3c2c29<br />RGB: 60,44,41</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -196,14 +196,14 @@
                                     <div class="color" style="background-color:#FFEBD7;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #FFEBD7<br />RGB: 255,235,215</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #FFEBD7<br />RGB: 255,235,215</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
                             <p>
