--- a/sample/colorscheme-shasta.html
+++ b/sample/colorscheme-shasta.html
@@ -171,7 +171,7 @@
                                     <div class="color" style="background-color:#fbad23;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-highlight<br />@color-p1</h4>HEX: #fbad23<br>RGB: 251,173,35</div>
+                            <div class="caption"><h3 class="h4">.color-highlight<br />@color-p1</h3>HEX: #fbad23<br>RGB: 251,173,35</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -179,7 +179,7 @@
                                     <div class="color" style="background-color:#336c39;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-primary<br />@color-p2</h4>HEX: #336c39<br />RGB: 51,108,57</div>
+                            <div class="caption"><h3 class="h4">.color-primary<br />@color-p2</h3>HEX: #336c39<br />RGB: 51,108,57</div>
                         </div>
 
                         <div class="quarter">
@@ -188,7 +188,7 @@
                                     <div class="color" style="background-color:#3c4543;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-standout<br />@color-p3</h4>HEX: #3c4543<br />RGB: 60,69,67</div>
+                            <div class="caption"><h3 class="h4">.color-standout<br />@color-p3</h3>HEX: #3c4543<br />RGB: 60,69,67</div>
                         </div>
                         <div class="quarter">
                             <div class="outer">
@@ -196,14 +196,14 @@
                                     <div class="color" style="background-color:#effaf6;"></div>
                                 </div>
                             </div>
-                            <div class="caption"><h4>.color-s1<br />@color-s1</h4>HEX: #effaf6<br />RGB: 239,250,246</div>
+                            <div class="caption"><h3 class="h4">.color-s1<br />@color-s1</h3>HEX: #effaf6<br />RGB: 239,250,246</div>
                         </div>
                     </div>
 
 
                     <div class="card card-understated">
                         <div class="card-heading">
-                            <h4><span class="ca-gov-icon-info"></span> Theme Colors Customization</h4>
+                            <h3 class="h4"><span class="ca-gov-icon-info"></span> Theme Colors Customization</h3>
                         </div>
                         <div class="card-body">
                             <p>
