--- a/sample/modules/card-image.html
+++ b/sample/modules/card-image.html
@@ -1,7 +1,7 @@
 <div class="card card-default">
     <img class="card-img-top" src="/sample/images/placeholder/207x136.gif" alt="Card image cap">
     <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h3 class="card-title h5">Card title</h3>
         <p>Some example text. <a href="">This is a sample link</a></p>
         <a href="#" class="btn btn-primary">Button</a>
     </div>
