--- a/sample/modules/cards-sidebar.html
+++ b/sample/modules/cards-sidebar.html
@@ -9,7 +9,7 @@
 
 <div class="card card-standout">
     <div class="card-heading">
-        <h4><span class="ca-gov-icon-info"></span> Card (Standout)</h4>
+        <h3 class="h4"><span class="ca-gov-icon-info"></span> Card (Standout)</h3>
     </div>
     <div class="card-body">
         <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
@@ -18,7 +18,7 @@
 
 <div class="card card-default">
     <div class="card-heading">
-        <h4><span class="ca-gov-icon-info"></span> Card (Default)</h4>
+        <h3 class="h4"><span class="ca-gov-icon-info"></span> Card (Default)</h3>
     </div>
     <div class="card-body">
         <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur blandit tempus porttitor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
