--- a/sample/modules/profile-banners-vertical-schema.html
+++ b/sample/modules/profile-banners-vertical-schema.html
@@ -5,7 +5,7 @@
             <img class="rounded-circle width-100 height-100" src="../images/125x125.jpg" alt="Image Description" itemprop="photo">
             <!-- Figure Image -->
             <!-- Figure Info -->
-            <h4 class="m-b-0 m-t" itemprop="name">Official Name</h4>
+            <h3 class="m-b-0 m-t h4" itemprop="name">Official Name</h3>
             <span class="font-size-13" itemprop="jobTitle">Government Entity Title</span>
             <hr class="m-t-sm m-b-0" />
             <a href="#" class="font-size-12" itemprop="url">Website</a>
@@ -21,7 +21,7 @@
             <!-- Figure Info -->
 
             <div class="m-b-sm">
-                <h4 class="m-b-0 m-t" itemprop="name">Official Name</h4>
+                <h3 class="m-b-0 m-t h4" itemprop="name">Official Name</h3>
                 <em class="d-block" itemprop="jobTitle">Government Entity Title</em>
             </div>
             <em class="d-block font-size-13" itemprop="url"><a href="#">Website</a></em>
