--- a/sample/navigation-full-width-utility.html
+++ b/sample/navigation-full-width-utility.html
@@ -75,7 +75,7 @@ Based on Twitter Bootstrap
 
 
 
-            <h3>Full width navigation with active search header example:</h3>
+            <h2 class="h3">Full width navigation with active search header example:</h2>
             <pre>
 <span class="text-accent-p2">&lt;header</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
     <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
