more Headings are not structured issue fixes

--- a/general-landing.html
+++ b/general-landing.html
@@ -83,7 +83,7 @@
                             </div>
                             <p class="lead m-b-60">From entry-level jobs to student opportunities to full career paths, the state of California offers a wide variety of opportunities for job applicants. The state offers comprehensive benefits for its employees, who provide essential and exceptional service to millions of Californians every day.</p>
                             <a class="btn btn-lg btn-primary rounded-15" href="https://www.jobs.ca.gov/" target="_blank">
-                                <i class="ca-gov-icon-online-services"></i> Apply Here
+                                <span class="ca-gov-icon-online-services" aria-hidden="true"></span> Apply Here
                             </a>
                         </div>
                     </div>
@@ -103,12 +103,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">CalHR</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="m-y-sm h4">
                                         Find a Job
-                                    </h4>
+                                    </h3>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel"></span> July 04, 2016
                                     </small>
                                 </header>
 
@@ -125,12 +125,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">EDD</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="h4 m-y-sm">
                                         File for Unemployment
-                                    </h4>
+                                    </h3>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel" aria-hidden="true"></span> July 04, 2016
                                     </small>
                                 </header>
 
@@ -147,12 +147,12 @@
 
                                 <header class="w-100 text-center absolute-centered p-x">
                                     <span class="btn btn-xs btn-primary rounded-0" href="#">EDD</span>
-                                    <h4 class="m-y-sm">
+                                    <h3 class="h4 m-y-sm">
                                         File for paid family leave insurance
-                                    </h4>
+                                    </h3>
 
                                     <small class="color-white">
-                                        <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
+                                        <span class="ca-gov-icon-time pos-rel" aria-hidden="true"></span> July 04, 2016
                                     </small>
                                 </header>
 
@@ -440,7 +440,7 @@
                             <div class="media">
                                 <div class="media-left"><span class="ca-gov-icon-lightbulb color-primary biggest"></span></div>
                                 <div class="media-body">
-                                    <h3 class="h4">Job Opportunities</h3>
+                                    <h3>Job Opportunities</h3>
                                     <ul class="list-standout">
                                         <li>
                                             <a href="/">California apprenticeship Program</a>
@@ -466,7 +466,7 @@
                             <div class="media">
                                 <div class="media-left"><span class="ca-gov-icon-graduate color-primary biggest"></span></div>
                                 <div class="media-body">
-                                    <h3 class="h4">Training</h3>
+                                    <h3>Training</h3>
                                     <ul class="list-standout">
                                         <li>
                                             <a href="/">California apprenticeship Program</a>
