--- a/gulp.html
+++ b/gulp.html
@@ -86,7 +86,7 @@
 
                 <div class="card card-default">
                     <div class="card-heading">
-                        <h4><span class="ca-gov-icon-info"></span> Fixing <span class="bold">ReferenceError: primordials is not defined</span> error</h4>
+                        <h3 class="h4"><span class="ca-gov-icon-info"></span> Fixing <span class="bold">ReferenceError: primordials is not defined</span> error</h3>
                        
                     </div>
                     <div class="card-body">
