--- a/sample/course-detail-panel.html
+++ b/sample/course-detail-panel.html
@@ -62,6 +62,7 @@ Based on Twitter Bootstrap
                 <li class="active">Course Detail (Panel)</li>
             </ol>
             
+            <h1>Course Detail (Panel)</h1>
             <p>This is an alternative layout for the course detail page. See also <a href="course-detail.html">Course Details</a> main page for more information on the usage and options for this module.</p>
             
             <div class="group">
