--- a/sample/exam-detail-card.html
+++ b/sample/exam-detail-card.html
@@ -61,7 +61,7 @@ Based on Twitter Bootstrap
                 <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Exam Detail (Card)</li>
             </ol>
-            
+            <h1>Exam Detail (Card)</h1>
             <p>This is an alternative layout for the exam detail page. See also <a href="exam-detail.html">Exam Details</a> main page for more information on the usage and options for this module.</p>
             
             <!--#include virtual="/sample/modules/schema-boilerplate.html" -->
