--- a/sample/modules/contact-panel-schema.html
+++ b/sample/modules/contact-panel-schema.html
@@ -1,6 +1,6 @@
 <div class="panel panel-understated">
     <div class="panel-heading">
-        <h4>California State Transportation Agency</h4>
+        <h3 class="h4">California State Transportation Agency</h3>
     </div>
     <div class="panel-body">
         <div itemscope itemtype="http://schema.org/Organization"><meta itemprop="name" content="California State Transportation Agency">
