--- a/sample/modules/contact-panel.html
+++ b/sample/modules/contact-panel.html
@@ -1,6 +1,6 @@
 <div class="panel panel-understated">
     <div class="panel-heading">
-        <h4>California State transportation Agency</h4>
+        <h3 class="h4">California State transportation Agency</h3>
     </div>
     <div class="panel-body">
         <p>915 Capitol Mall Suite 350 B<br>
