--- a/sample/modules/contact.html
+++ b/sample/modules/contact.html
@@ -1,4 +1,4 @@
-<h1><span class="ca-gov-icon-arrow-down"></span> California State transportation Agency</h1>
+<h2 class="h1"><span class="ca-gov-icon-arrow-down"></span> California State transportation Agency</h2>
 <p>915 Capitol Mall Suite 350 B<br>
 Sacramento, CA 95814<br>
 Phone: (916) 323-5400<br>
