--- a/sample/modules/course-detail-schema.html
+++ b/sample/modules/course-detail-schema.html
@@ -1,6 +1,6 @@
 <article class="course-detail" itemscope itemtype="http://schema.org/Event">
     <div class="header">
-        <h1 itemprop="name"><span class="ca-gov-icon-arrow-down"></span> Course Name or Title</h1>
+        <h2 class="h1" itemprop="name"><span class="ca-gov-icon-arrow-down"></span> Course Name or Title</h2>
     </div>
 
     <div class="description" itemprop="description">
