--- a/sample/modules/course-detail.html
+++ b/sample/modules/course-detail.html
@@ -1,5 +1,5 @@
 <article class="course-detail"> 
-    <div class="header"><h1><span class="ca-gov-icon-arrow-down"></span> Course Title</h1></div>
+    <div class="header"><h2 class="h1"><span class="ca-gov-icon-arrow-down"></span> Course Title</h2></div>
     
     <div class="description">
         <p>Exam Description - Maecenas faucibus mollis interdum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
