--- a/sample/modules/exam-detail-panel-schema.html
+++ b/sample/modules/exam-detail-panel-schema.html
@@ -1,6 +1,6 @@
 <article class="event-detail" itemscope itemtype="http://schema.org/Event"> 
     <div class="header">
-        <h1 itemprop="name"><span class="ca-gov-icon-arrow-down"></span> Exam Name or Title</h1>
+        <h2 class="h1" itemprop="name"><span class="ca-gov-icon-arrow-down"></span> Exam Name or Title</h2>
     </div>
     
     <strong>Organizer</strong>
@@ -16,7 +16,7 @@
     
     <div class="panel panel-overstated">
         <div class="panel-heading">
-            <h4>Exam Details</h4>
+            <h3 class="h4">Exam Details</h3>
             <div class="options">
                 <a href="" class="btn btn-default" itemprop="url">Register</a>
             </div>
