--- a/sample/modules/exam-detail-panel.html
+++ b/sample/modules/exam-detail-panel.html
@@ -1,5 +1,5 @@
 <article class="exam-detail"> 
-    <header class="header"><h1><span class="ca-gov-icon-arrow-down"></span> Exam Detail Title</h1></header>
+    <header class="header"><h2 class="h1"><span class="ca-gov-icon-arrow-down"></span> Exam Detail Title</h2></header>
     
     <strong>Organizer</strong>
     <p class="date-time"> 
@@ -14,7 +14,7 @@
     
     <div class="panel panel-overstated">
         <div class="panel-heading">
-            <h4>Exam Details</h4>
+            <h3 class="h4">Exam Details</h3>
             <div class="options">
                 <a href="" class="btn btn-default">Register</a>
             </div>
