--- a/sample/modules/headers.html
+++ b/sample/modules/headers.html
@@ -1,5 +1,5 @@
 <article>
-    <h1><span class="ca-gov-icon-arrow-down"></span> Heading H1</h1>
+    <h2 class="h1"><span class="ca-gov-icon-arrow-down"></span> Heading H1</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu odio sem, non faucibus lectus. Maecenas et lacus et nisl volutpat semper a a magna. Curabitur aliquam risus sit amet mauris sagittis fermentum. Praesent ut pellentesque mauris. Mauris semper varius fringilla. Nam eget sagittis elit. Ut eleifend, ipsum non sagittis tempor, tellus dui fermentum risus, eu tempus lacus nisl vel augue. Proin lacus massa, varius a dictum ac, bibendum at ligula. Phasellus porttitor sollicitudin semper. In malesuada, magna ac consequat consectetur, nisi elit molestie magna, sed hendrerit turpis mi mattis massa. Proin in ante nec enim rutrum mattis. Curabitur tempus, nunc in posuere blandit, libero odio consectetur quam, eget sollicitudin tortor ante eget urna. Etiam in massa quis elit aliquet lacinia. Quisque semper rutrum leo, nec condimentum odio suscipit eget. Etiam blandit sapien vel mi bibendum auctor. </p>
     <div class="featured-narrative"> <strong>Featured Narrative</strong>
         <p>- This content style could be used when a certain portion of the main narrative needs to be emphasized.</p>
