--- a/sample/modules/job-detail.html
+++ b/sample/modules/job-detail.html
@@ -1,6 +1,6 @@
 <article class="job-detail"> 
     <header class="header">
-        <h1><span class="ca-gov-icon-arrow-down"></span> Job Title</h1>
+        <h2 class="h1"><span class="ca-gov-icon-arrow-down" aria-hidden="true"></span> Job Title</h2>
     </header>
    
     <div class="sub-header">
@@ -61,7 +61,7 @@
          <!-- ABOUT THIS DEPARTMENT -->
         <div class="card card-understated about-department">
             <div class="card-heading">
-                <h4>About this Department</h4>
+                <h3 class="h4">About this Department</h3>
             </div>
             <div class="card-body">
                 <p>Maecenas faucibus mollis interdum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>               
