--- a/ssi/section-service-faq.html
+++ b/ssi/section-service-faq.html
@@ -1,9 +1,9 @@
 <div class="panel-group" id="example-accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
+            <h3 class="h4 panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#example-accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">How do I become eligible to renew my registration on the Internet?</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
@@ -21,9 +21,9 @@
     
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
+            <h3 class="h4 panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#example-accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Do I need my Renewal Identification Number (RIN) on my renewal notice to renew my drivers license online?</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
@@ -34,9 +34,9 @@
     
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
+            <h3 class="h4 panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#example-accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Can I renew my driver license by Internet if I have a change of address at the same time?</a>
-            </h4>
+            </h3>
         </div>
         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
