--- a/sample/course-detail.html
+++ b/sample/course-detail.html
@@ -61,6 +61,7 @@ Based on Twitter Bootstrap
                 <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Course Detail</li>
             </ol>
+            <h1>Course Detail</h1>
 
             <p><code>.course-detail</code> is an end page content module for courses.  To begin, wrap the contents of the page in a <code>&lt;article class="course-detail"&gt;</code> tag.</p>
             <p>This module makes use of the <code>&lt;header&gt;</code> tag and locates the h1 within it.</p>
