--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -149,7 +149,7 @@
 
                 <div class="card card-overstated">
                     <div class="card-heading">
-                        <h4><span class="ca-gov-icon-road-pin"></span> Mini Locations</h4>
+                        <h3 class="h4"><span class="ca-gov-icon-road-pin"></span> Mini Locations</h3>
                     </div>
                     <div class="card-body">
                         <!--#include virtual="/sample/modules/location-mini.html" -->
