--- a/sample/modules/contact-card.html
+++ b/sample/modules/contact-card.html
@@ -1,6 +1,6 @@
 <div class="card card-understated">
     <div class="card-heading">
-        <h4>California State transportation Agency</h4>
+        <h3 class="h4">California State transportation Agency</h3>
     </div>
     <div class="card-body">
         <p>915 Capitol Mall Suite 350 B<br>
