--- a/sample/modules/contact-schema.html
+++ b/sample/modules/contact-schema.html
@@ -1,5 +1,5 @@
 <div itemscope itemtype="http://schema.org/Organization">
-    <h1 itemprop="name"><span class="ca-gov-icon-arrow-down"></span> California State transportation Agency</h1>
+    <h2 class="h1" itemprop="name"><span class="ca-gov-icon-arrow-down"></span> California State transportation Agency</h2>
     <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
         <span itemprop="streetAddress">915 Capitol Mall Suite 350 B</span><br>
         <span itemprop="addressLocality">Sacramento</span>, <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">95814</span><br>
