--- a/sample/modules/number-counter-circles.html
+++ b/sample/modules/number-counter-circles.html
@@ -4,7 +4,7 @@
         <div class="m-b-md" id="circle1">
         </div>
 
-        <h4>UI Design</h4>
+        <h3 class="h4">UI Design</h3>
         <p class="p-x m-b-0">Sed feugiat porttitor nunc etiam gravi daex justo ac rhoncus</p>
     </div>
     <!-- End Counter Pie Chart -->
@@ -13,7 +13,7 @@
         <div class="m-b-md" id="circle2">
         </div>
 
-        <h4>Web Development</h4>
+        <h3 class="h4">Web Development</h3>
         <p class="p-x m-b-0">Libero eget sollic itudin maximus nullanunc vitae maximus</p>
     </div>
     <!-- End Counter Pie Chart -->
@@ -22,7 +22,7 @@
         <div class="m-b-md" id="circle3">
         </div>
 
-        <h4>JavaScript</h4>
+        <h3 class="h4">JavaScript</h3>
         <p class="p-x m-b-0">Morem lipsum lidolor sit amet consectetur adipiscing</p>
     </div>
     <!-- End Counter Pie Chart -->
