--- a/sample/modules/progress-bar-variety.html
+++ b/sample/modules/progress-bar-variety.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<h6 class="m-b-sm">Project Completeness</h6>
+<h3 class="m-b-sm h6">Project Completeness</h3>
 <div class="progress height-20 m-b-md overflow-visible">
     <div class="progress-bar pos-rel bg-primary" role="progressbar" style="width: 83%" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100">
         <div class="text-center progress-pointer bg-primary font-size-12 overflow-auto">83%</div>
@@ -12,7 +12,7 @@
 </div>
 
 
-<h6 class="m-b-sm">Project Completeness <span class="float-right ml-10">73%</span></h6>
+<h3 class="m-b-sm h6">Project Completeness <span class="float-right ml-10">73%</span></h3>
 <div class="progress height-5 m-b-md">
     <div class="progress-bar bg-dark" role="progressbar" style="width: 73%" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
