--- a/sample/sticky-footer.html
+++ b/sample/sticky-footer.html
@@ -65,7 +65,9 @@
                 <h1>Sticky Footer</h1>
                 <p>The purpose of a sticky footer is that it "sticks" to the bottom of the browser window. But not always, if there is enough content on the page to push the footer lower, it still does that. But if the content on the page is short, a sticky footer will still hang to the bottom of the browser window. To acheive that add <code>.sticky-footer</code> to the <code>&lt;body&gt;</code> tag and <code>.mt-auto</code> class to your <code>&lt;footer&gt;</code> tag. <button class="btn btn-default btn-xs m-l" id="add">Add more content</button><button class="btn btn-default btn-xs m-l" id="remove">Remove content</button></p>
 
-                <div class="content"></div>
+                <div class="content">
+                <h2>Content</h2>
+                </div>
             </main>
 
 
